--- a/pages/numbers_rules.html
+++ b/pages/numbers_rules.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <a href="../pages/games.html"><img src="../images/back.svg" alt="Back Arrow"/></a>
-            <h1>Taboo</h1>
+            <h1>Numbers</h1>
         </header>
         <main>
 
